--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,25 @@
-version: "3.9"
+version: '3.9'
 
 services:
-  mongodb:
-    build:
-      context: .
-    volumes:
-      - mongodb-data:/data/db
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: example
+      POSTGRES_DB: ada-challenge
     ports:
-      - "27017:27017"
+      - '5432:5432'
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  app:
+    build: .
+    restart: always
+    ports:
+      - '5000:5000'
+    environment:
+      - POSTGRES_URL=postgres://root:example@postgres/ada-challenge
 
 volumes:
-  mongodb-data:
+  postgres-data:
