--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docker": "docker-compose up --build",
     "start": "node app",
     "start-dev": "nodemon app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha --recursive 'test/**/*.test.js' --timeout 10000 --exit"
   },
   "author": "",
   "license": "ISC",
@@ -22,12 +22,19 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "eslint": "^8.34.0",
     "eslint-plugin-import": "^2.27.5",
+    "mocha": "^10.2.0",
     "module-alias": "^2.2.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nyc": "^15.1.0",
+    "sinon": "^15.0.1",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.3.3"
   }
 }
